projetos/local/nexus-dashboard-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-dashboard-api
  labels:
    environment: local
