projetos/local/nexus-dashboard-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-dashboard-api-route
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: tech-https
  hostnames:
  - "dashboard-api.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-dashboard-api-service
      port: 80
